Fix z-index bug with cards popping over the navbar

--- a/src/main.css
+++ b/src/main.css
@@ -56,6 +56,7 @@ body {
 	background: #ffffff;
 	width: 100%;
 	font-size: 4.1vw;
+	z-index: 1;
 }
 
 .navbar-inner {
